--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="carGame">
         <div class="score"></div>
+        <div class="highScore"></div>
         <div class="startScreen">
             <p>Press Here To Start <br>
             Arrow Keys To Move <br>
